--- a/frontend/frontend/chess.html
+++ b/frontend/frontend/chess.html
@@ -10,6 +10,10 @@
 		<table>
 		</table>
 	</div>
+
+	<div id="log" style="color: white;">
+		log
+	</div>
 	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
